--- a/style.css
+++ b/style.css
@@ -62,3 +62,19 @@ input{
     cursor: pointer;
     transition: .4s;
 }
+#historic{
+    padding: 1rem;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 100%;
+}
+
+.box-my-message{
+    text-align: right;
+}
+
+.box-response-message{
+    text-align: left;
+}
